src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-223.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uvh=1.2\")"
---
items:
  - loc: "#units uvh=1.2"
    locs:
      directive: "#units"
    options:
      - loc: uvh=1.2
        locs:
          option: uvh
          variance: "1.2"
        option: HorizontalUnitVariance
        variance: 1.2
    type: UnitsDirective
