src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-224.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uvh=-1.3\")"
---
items:
  - loc: "#units uvh=-1.3"
    locs:
      directive: "#units"
    options:
      - loc: uvh=-1.3
        locs:
          option: uvh
          variance: "-1.3"
        option: HorizontalUnitVariance
        variance: -1.3
    type: UnitsDirective
