src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-226.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uvv\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units uvv"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: uvv
              option: VerticalUnitVariance
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
