src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-228.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uvv=0\")"
---
items:
  - loc: "#units uvv=0"
    locs:
      directive: "#units"
    options:
      - loc: uvv=0
        locs:
          option: uvv
          variance: "0"
        option: VerticalUnitVariance
        variance: 0
    type: UnitsDirective
