src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-231.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uvv=1.2\")"
---
items:
  - loc: "#units uvv=1.2"
    locs:
      directive: "#units"
    options:
      - loc: uvv=1.2
        locs:
          option: uvv
          variance: "1.2"
        option: VerticalUnitVariance
        variance: 1.2
    type: UnitsDirective
