src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-233.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uvv=-1.3a\")"
---
INVALID:
  items:
    - loc: "#units uvv=-1.3a"
      locs:
        directive: "#units"
      options:
        - loc: uvv=-1.3
          locs:
            option: uvv
            variance: "-1.3"
          option: VerticalUnitVariance
          variance: -1.3
      type: UnitsDirective
issues:
  - code: EUNEXPECTED
    loc: a
    message: Unexpected text
    severity: Error
